testsuite/tests/indexed-types/should_fail/TyFamArity1.hs
{-# LANGUAGE TypeFamilies #-}

type family T a b :: *
type instance T Int = IO   -- must fail: too few args
