testsuite/tests/indexed-types/should_fail/TyFamArity1.stderr

TyFamArity1.hs:4:15: error:
    • Number of parameters must match family declaration; expected 2
    • In the type instance declaration for ‘T’
